tenzir/tests/node/detach/startup_errors.tql
// node: true
// error: true

pipeline::detach {
  from env("INPUTS") + "/this-file-does-not-exist.json"
  discard
}, id="test-id"
